--- a/CSS-Projects/CSS-Basic Projects/CSS-P1/style.css
+++ b/CSS-Projects/CSS-Basic Projects/CSS-P1/style.css
@@ -1,17 +1,28 @@
-
 #main {
   height: 100%;
   width: 100%;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: 0;
+  font-family: "Gilroy";
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 #nav {
   height: 90px;
-  width: 100%;
+  width: 99%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   gap: 30px;
-  padding: 0 30px;
 }
 
 #nav h4 {
@@ -29,8 +40,7 @@
 }
 
 #center {
-  width: 100%;
-  padding: 40px 80px;
+  width: 99%;
 }
 
 #center h1 {
@@ -81,7 +91,7 @@
 }
 
 #bottom {
-  height: 80%;
+  height: 38.4%;
   width: 100%;
   background-size: cover;
   background-image: url(https://images.unsplash.com/photo-1611312449408-fcece27cdbb7?q=80&w=1938&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
