--- a/CSS-Projects/CSS-Basic Projects/CSS-P1/style.css
+++ b/CSS-Projects/CSS-Basic Projects/CSS-P1/style.css
@@ -40,13 +40,14 @@ body {
 }
 
 #center {
-  width: 99%;
+  width: 98%;
+  margin: 0 0 0 25px;
 }
 
 #center h1 {
-  font-size: 80px;
+  font-size: 5vw;
   font-weight: 500;
-  line-height: 90px;
+  line-height: 4.68vw;
 }
 
 #center-in {
@@ -57,8 +58,8 @@ body {
 }
 
 #center-in p {
-  font-size: 20px;
-  line-height: 32px;
+  font-size: 1.1vw;
+  line-height: 1.2vw;
   font-weight: 600;
 }
 
@@ -91,9 +92,93 @@ body {
 }
 
 #bottom {
-  height: 38.4%;
+  height: 38.5%;
   width: 100%;
   background-size: cover;
   background-image: url(https://images.unsplash.com/photo-1611312449408-fcece27cdbb7?q=80&w=1938&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   background-position: 0 20%;
+}
+
+@media (max-width: 600px) {
+  #nav {
+    height: 60px;
+    width: 99%;
+    gap: 20px;
+  }
+
+  #nav h4 {
+    font-size: 12px;
+    font-weight: 600;
+  }
+
+  #nav i {
+    background-color: black;
+    color: white;
+    padding: 7px;
+    font-size: 15px;
+    border-radius: 50%;
+    font-weight: 500;
+  }
+
+  #center {
+    width: max-content;
+    margin: 0 0 0 20px;
+  }
+
+  #center h1 {
+    width: fit-content;
+    font-size: 12vw;
+    font-weight: 500;
+    line-height: 11vw;
+  }
+
+  #center-in {
+    width: fit-content;
+    height: 200px;
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  #center-in p {
+    width: 90%;
+    font-size: 3.2vw;
+    line-height: 4vw;
+    font-weight: 600;
+  }
+
+  #right {
+    width: 90vw;
+    margin-top: 20px;
+  }
+
+  .elem {
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid black;
+  }
+
+  .elem i {
+    font-size: 18px;
+    font-weight: 500;
+    opacity: 1;
+    color: #303030;
+  }
+
+  .elem a {
+    color: #303030;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+  }
+  #bottom {
+    margin-top: 4vh;
+    height: 47.8%;
+    width: 100%;
+    background-size: cover;
+    background-image: url(https://images.unsplash.com/photo-1611312449408-fcece27cdbb7?q=80&w=1938&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-position: 0 30%;
+  }
 }
